SubReddit v1/objects/Vote__c.object
<CustomObject>
    <fields>
        <fullName>Source_Id__c</fullName>
        <label>Source Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Votes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vote</label>
        <type>Checkbox</type>
    </fields>
    <label>Vote</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Vote Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Votes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>